migrate getting started to MarxanConnectGUI
hyperlinks don't work in wxFormBuilder

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,7 @@ ENV/
 .mypy_cache/
 .idea*
 toymap.py
-MarxanConnectSetupWindows.exe
-Marxan with Connectivity.nsi.bak
+*.exe
+*.bak
 .Rproj.user
+*.Rhistory
