--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -11,18 +11,18 @@ navbar:
     icon: fa-graduation-cap
     href: tutorial.html
     menu:
-        - text: "Getting Started"
-          href: tutorial.html
-        - text: "CF + demographic data"
-          href: CF_demographic.html
-        - text: "CF + landscape data"
-          href: CF_landscape.html
-        - text: "CSM + demographic data"
-          href: CSM_demographic.html
-        - text: "CSM + landscape data"
-          href: CSM_landscape.html
-        - text: "Setting Targets"
-          href: targets.html
+    - text: Getting Started
+      href: tutorial.html
+    - text: Conservation Features + demographic data
+      href: CF_demographic.html
+    - text: Conservation Features + landscape data
+      href: CF_landscape.html
+    - text: Connectivity as Spatial Dependency + demographic data
+      href: CSD_demographic.html
+    - text: Connectivity as Spatial Dependency + landscape data
+      href: CSD_landscape.html
+    - text: Setting Targets and Post-hoc Evaluation
+      href: targets.html
   - text: Glossary
     icon: fa-book
     href: glossary.html
